--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,7 @@
         <div class="home">
             <div class="page-container">
                 <div id="js-autocomplete">
-                    <input type="text" class="js-autocomplete-input field-text autocomplete" placeholder="Insert a name" />
-                    <div class="js-autocomplete-suggestions"></div>
+                    <input type="text" class="field-text autocomplete" placeholder="Insert a name" />
                 </div>
             </div>
         </div>
