Update dependencies and gulpfile

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
         <div class="home">
             <div class="page-container">
                 <div id="js-autocomplete">
-                    <input type="text" class="field-text autocomplete" placeholder="Insert a name" />
+                    <input type="text" class="field-text autocomplete" placeholder="Insert a name" autofocus />
                 </div>
             </div>
         </div>
